--- a/templates/home/page.html.twig
+++ b/templates/home/page.html.twig
@@ -8,17 +8,17 @@
 	<article>
 		<h2 class="blue text-center my-5">{{ page.title ?? '' }}</h2>
 		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
-					{{ ( page.content ?? '')|raw }}
-				</div>
-			</div>
-            <p>
-                {% for keyWords in page.keywords %}
-                # <strong>{{ keyWords }}</strong>
-                {% endfor %}						
-            </p>
 
+			<div>
+				{{ ( page.content ?? '')|raw }}
+			</div>
+
+			<p class="my-5 ml-5">
+				{% for keyWords in page.keywords %}
+					#
+					<strong>{{ keyWords }}</strong>
+				{% endfor %}
+			</p>
 		</div>
 	</article>
 {% endblock %}
