--- a/templates/categories/_form.html.twig
+++ b/templates/categories/_form.html.twig
@@ -30,4 +30,6 @@
 
     <button class="btn btn-success my-5">{{ button_label|default('Valider') }}</button>
 
-{{ form_end(form) }}
+{{ form_row(form._token) }}
+
+{{ form_end(form, {'render_rest': false}) }}
