--- a/templates/categories/new.html.twig
+++ b/templates/categories/new.html.twig
@@ -40,5 +40,7 @@
 	</div>
 {% endblock %}
 {% block javascripts %}
+
+<script src="{{ asset('js/fillSlugInput.js') }}"></script>
 <script src="{{ asset('js/add-collection-widget.js') }}"></script>
 {% endblock %}
