--- a/templates/form/selectlongtext.html.twig
+++ b/templates/form/selectlongtext.html.twig
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-6">
 				<p>Saisissez une nouvelle valeur :</p>
-				<textarea {{ block("widget_attributes") }} list="{{ id }}_list" value="{{ form.vars.value }}" class="form-control"></textarea>
+				<textarea {{ block("widget_attributes") }} list="{{ id }}_list" value="{{ form.vars.value }}" class="form-control">{{ form.vars.value }}</textarea>
 			</div>
 			<div class="col-6">
 				<p>Ou sélectionnez dans la base de données :</p>
