correction titre onglets

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -72,7 +72,7 @@
                         <button class="navbar-toggler p-2 border my-2 mx-2" type="button" data-toggle="offcanvas">
                             <span class="navbar-toggler-icon"></span>
                         </button>   
-                        <img id="logoMobile" src="{{ asset('images/icones/logo_mobile.png' ) }}" alt="">
+                        <img id="logoMobile" src="{{ asset('images/icones/logo_mobile.png' ) }}" alt="Version mobile du logo Ludo et Sophie">
                     
                     </div>
 
