--- a/templates/home/product.html.twig
+++ b/templates/home/product.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Ludo et Sophie -
-	{{ product.meta_tag_title ?? '' }}
+	{{ product.metaTagTitle ?? '' }}
 {% endblock %}
 
 {% block body %}
