--- a/templates/home/page.html.twig
+++ b/templates/home/page.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Ludo et Sophie -
-	{{ page.meta_tag_title ?? '' }}
+	{{ page.metaTagTitle ?? '' }}
 {% endblock %}
 
 {% block body %}
